--- a/ENations/Views/Regions/Index.cshtml
+++ b/ENations/Views/Regions/Index.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Country.CountryId)
+                @Html.DisplayFor(modelItem => item.Country.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.RegionId">Edit</a> |
