feat: newspaper controller

--- a/ENations/Views/Articles/Create.cshtml
+++ b/ENations/Views/Articles/Create.cshtml
@@ -38,7 +38,7 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NewspaperId" class="control-label"></label>
+                <label asp-for="NewspaperId" class="control-label">Newspaper Name</label>
                 <select asp-for="NewspaperId" class ="form-control" asp-items="ViewBag.NewspaperId"></select>
             </div>
             <div class="form-group">
