--- a/ENations/Views/Articles/Index.cshtml
+++ b/ENations/Views/Articles/Index.cshtml
@@ -52,7 +52,7 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Newspaper.NewspaperId)
+                @Html.DisplayFor(modelItem => item.Newspaper.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ArticleId">Edit</a> |
