--- a/ENations/Views/Articles/Delete.cshtml
+++ b/ENations/Views/Articles/Delete.cshtml
@@ -45,7 +45,7 @@
             @Html.DisplayNameFor(model => model.Newspaper)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Newspaper.NewspaperId)
+            @Html.DisplayFor(model => model.Newspaper.Name)
         </dd>
     </dl>
     
