--- a/ENations/Views/Articles/Edit.cshtml
+++ b/ENations/Views/Articles/Edit.cshtml
@@ -39,7 +39,7 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NewspaperId" class="control-label"></label>
+                <label asp-for="NewspaperId" class="control-label">Newspaper Name</label>
                 <select asp-for="NewspaperId" class="form-control" asp-items="ViewBag.NewspaperId"></select>
                 <span asp-validation-for="NewspaperId" class="text-danger"></span>
             </div>
