feat: congress_member and user_gyms controllers added.

--- a/ENations/Views/Chats/Index.cshtml
+++ b/ENations/Views/Chats/Index.cshtml
@@ -13,10 +13,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ChannelType)
+                Channel Type
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ChannelId)
+                Channel Id
             </th>
             <th></th>
         </tr>
