--- a/ENations/Views/Companies/Index.cshtml
+++ b/ENations/Views/Companies/Index.cshtml
@@ -19,7 +19,7 @@
                 @Html.DisplayNameFor(model => model.Quality)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LastWorked)
+                Last Worked
             </th>
             <th></th>
         </tr>
