--- a/ENations/Views/CongressMembers/Index.cshtml
+++ b/ENations/Views/CongressMembers/Index.cshtml
@@ -14,7 +14,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.PoliticalParty)
+                Political Party
             </th>
             <th></th>
         </tr>
@@ -23,7 +23,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.PoliticalParty.PoliticalPartyId)
+                @Html.DisplayFor(modelItem => item.PoliticalParty.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CongressMemberId">Edit</a> |
