--- a/ENations/Views/ItemOffers/Index.cshtml
+++ b/ENations/Views/ItemOffers/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Item Offers</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -49,10 +49,10 @@
                 @Html.DisplayFor(modelItem => item.Quality)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Country.CountryId)
+                @Html.DisplayFor(modelItem => item.Country.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.User.UserId)
+                @Html.DisplayFor(modelItem => item.User.Username)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ItemOffersId">Edit</a> |
