--- a/ENations/Views/LawProposals/Index.cshtml
+++ b/ENations/Views/LawProposals/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>LawProposal</h1>
+<h1>Law Proposal</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ExpectedVotes)
+                Expected Votes
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Type)
@@ -34,7 +34,7 @@
                 @Html.DisplayNameFor(model => model.Finished)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CongressMember)
+                Congress Member
             </th>
             <th></th>
         </tr>
