--- a/ENations/Views/Messages/Index.cshtml
+++ b/ENations/Views/Messages/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Chat.ChatId)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Sender.UserId)
+                @Html.DisplayFor(modelItem => item.Sender.Username)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.MessageId">Edit</a> |
