--- a/ENations/Views/PoliticalParties/Index.cshtml
+++ b/ENations/Views/PoliticalParties/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Country.CountryId)
+                @Html.DisplayFor(modelItem => item.Country.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.PoliticalPartyId">Edit</a> |
