--- a/ENations/Views/UserGyms/Create.cshtml
+++ b/ENations/Views/UserGyms/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ENations.Models.CongressMember
+﻿@model ENations.Models.UserGyms
 
 @{
     ViewData["Title"] = "Create";
@@ -6,15 +6,15 @@
 
 <h1>Create</h1>
 
-<h4>CongressMember</h4>
+<h4>UserGyms</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="PoliticalPartyId" class="control-label">Political Party</label>
-                <select asp-for="PoliticalPartyId" class ="form-control" asp-items="ViewBag.PoliticalPartyId"></select>
+                <label asp-for="UserId" class="control-label"></label>
+                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
