feat: changes & update

--- a/ENations/Views/CongressMembers/Delete.cshtml
+++ b/ENations/Views/CongressMembers/Delete.cshtml
@@ -15,7 +15,7 @@
             @Html.DisplayNameFor(model => model.PoliticalParty)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PoliticalParty.PoliticalPartyId)
+            @Html.DisplayFor(model => model.PoliticalParty.Name)
         </dd>
     </dl>
     
