--- a/ENations/Views/PartyMembers/Create.cshtml
+++ b/ENations/Views/PartyMembers/Create.cshtml
@@ -18,11 +18,11 @@
                 <span asp-validation-for="Level" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PoliticalPartyId" class="control-label"></label>
+                <label asp-for="PoliticalPartyId" class="control-label">Political Party Name</label>
                 <select asp-for="PoliticalPartyId" class ="form-control" asp-items="ViewBag.PoliticalPartyId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
+                <label asp-for="UserId" class="control-label">Username</label>
                 <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
             </div>
             <div class="form-group">
