--- a/ENations/Views/Shared/_Layout.cshtml
+++ b/ENations/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">ENations</a>
+                <a class="navbar-brand" href="/Home/Index">ENations</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -36,10 +36,10 @@
                                 Political and Legislative
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="politicalLegislativeDropdown">
+                                <li><a class="dropdown-item" href="/PoliticalParties/Index">Political Parties</a></li>
+                                <li><a class="dropdown-item" href="/PartyMembers/Index">Party Members</a></li>
                                 <li><a class="dropdown-item" href="/CongressMembers/Index">Congress Members</a></li>
                                 <li><a class="dropdown-item" href="/LawProposals/Index">Law Proposal</a></li>
-                                <li><a class="dropdown-item" href="/PartyMembers/Index">Party Members</a></li>
-                                <li><a class="dropdown-item" href="/PoliticalParties/Index">Political Parties</a></li>
                             </ul>
                         </li>
 
@@ -49,8 +49,8 @@
                                 Media and Communication
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="mediaCommunicationDropdown">
-                                <li><a class="dropdown-item" href="/Articles/Index">Articles</a></li>
                                 <li><a class="dropdown-item" href="/Newspapers/Index">Newspapers</a></li>
+                                <li><a class="dropdown-item" href="/Articles/Index">Articles</a></li>
                                 <li><a class="dropdown-item" href="/Chats/Index">Chats</a></li>
                                 <li><a class="dropdown-item" href="/Messages/Index">Messages</a></li>
                             </ul>
@@ -75,6 +75,8 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="userEngagementDropdown">
                                 <li><a class="dropdown-item" href="/Users/Index">Users</a></li>
+                                <li><a class="dropdown-item" href="/UserGyms/Index">User Gyms</a></li>
+
                             </ul>
                         </li>
                     </ul>
