--- a/ENations/Views/CongressMembers/Details.cshtml
+++ b/ENations/Views/CongressMembers/Details.cshtml
@@ -7,14 +7,14 @@
 <h1>Details</h1>
 
 <div>
-    <h4>CongressMember</h4>
+    <h4>Congress Member</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PoliticalParty)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PoliticalParty.PoliticalPartyId)
+            @Html.DisplayFor(model => model.PoliticalParty.Name)
         </dd>
     </dl>
 </div>
