--- a/ENations/Views/PartyMembers/Details.cshtml
+++ b/ENations/Views/PartyMembers/Details.cshtml
@@ -20,13 +20,13 @@
             @Html.DisplayNameFor(model => model.PoliticalParty)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PoliticalParty.PoliticalPartyId)
+            @Html.DisplayFor(model => model.PoliticalParty.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.User)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.UserId)
+            @Html.DisplayFor(model => model.User.Username)
         </dd>
     </dl>
 </div>
