--- a/ENations/Views/PartyMembers/Edit.cshtml
+++ b/ENations/Views/PartyMembers/Edit.cshtml
@@ -19,12 +19,12 @@
                 <span asp-validation-for="Level" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PoliticalPartyId" class="control-label"></label>
+                <label asp-for="PoliticalPartyId" class="control-label">Political Party Name</label>
                 <select asp-for="PoliticalPartyId" class="form-control" asp-items="ViewBag.PoliticalPartyId"></select>
                 <span asp-validation-for="PoliticalPartyId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
+                <label asp-for="UserId" class="control-label">Username</label>
                 <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
