--- a/ENations/Views/Regions/Delete.cshtml
+++ b/ENations/Views/Regions/Delete.cshtml
@@ -4,11 +4,8 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h1>Are you sure you want to delete this region?</h1>
 <div>
-    <h4>Region</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -21,13 +18,13 @@
             @Html.DisplayNameFor(model => model.Country)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Country.CountryId)
+            @Html.DisplayFor(model => model.Country.Name)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="RegionId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        <a asp-action="Index" class="btn btn-primary">Back to List</a>
     </form>
 </div>
