--- a/ENations/Views/CongressMembers/Delete.cshtml
+++ b/ENations/Views/CongressMembers/Delete.cshtml
@@ -4,11 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Are you sure you want to delete this Congress Member?</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>CongressMember</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
