--- a/ENations/Views/Countries/Details.cshtml
+++ b/ENations/Views/Countries/Details.cshtml
@@ -31,6 +31,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.CountryId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.CountryId" class="btn btn-warning">Edit</a> 
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+
 </div>
