--- a/ENations/Views/PoliticalParties/Delete.cshtml
+++ b/ENations/Views/PoliticalParties/Delete.cshtml
@@ -4,11 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Are you sure you want to delete this Political Party?</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>PoliticalParty</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -27,7 +25,7 @@
             @Html.DisplayNameFor(model => model.Country)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Country.CountryId)
+            @Html.DisplayFor(model => model.Country.Name)
         </dd>
     </dl>
     
