Fear: user controllers done and some ui modifications

--- a/ENations/Views/Shared/_Layout.cshtml
+++ b/ENations/Views/Shared/_Layout.cshtml
@@ -76,7 +76,8 @@
                             <ul class="dropdown-menu" aria-labelledby="userEngagementDropdown">
                                 <li><a class="dropdown-item" href="/Users/Index">Users</a></li>
                                 <li><a class="dropdown-item" href="/UserGyms/Index">User Gyms</a></li>
-
+                                <li><a class="dropdown-item" href="/UserItems/Index">User Items</a></li>
+                                <li><a class="dropdown-item" href="/UserMoneys/Index">User Money</a></li>
                             </ul>
                         </li>
                     </ul>
