--- a/ENations/Views/UserMoneys/Create.cshtml
+++ b/ENations/Views/UserMoneys/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ENations.Models.CountryFunds
+﻿@model ENations.Models.UserMoney
 
 @{
     ViewData["Title"] = "Create";
@@ -6,25 +6,25 @@
 
 <h1>Create</h1>
 
-<h4>CountryFunds</h4>
+<h4>UserMoney</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CountryId" class="control-label">Country Name</label>
-                <select asp-for="CountryId" class ="form-control" asp-items="ViewBag.CountryId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Currency" class="control-label"></label>
-                <input asp-for="Currency" class="form-control" />
-                <span asp-validation-for="Currency" class="text-danger"></span>
+                <label asp-for="UserId" class="control-label">Username</label>
+                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Gold" class="control-label"></label>
                 <input asp-for="Gold" class="form-control" />
                 <span asp-validation-for="Gold" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Currency" class="control-label"></label>
+                <input asp-for="Currency" class="form-control" />
+                <span asp-validation-for="Currency" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
