--- a/ENations/Views/ItemOffers/Delete.cshtml
+++ b/ENations/Views/ItemOffers/Delete.cshtml
@@ -39,13 +39,13 @@
             @Html.DisplayNameFor(model => model.Country)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Country.CountryId)
+            @Html.DisplayFor(model => model.Country.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.User)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.UserId)
+            @Html.DisplayFor(model => model.User.Username)
         </dd>
     </dl>
     
