--- a/ENations/Views/Messages/Create.cshtml
+++ b/ENations/Views/Messages/Create.cshtml
@@ -22,7 +22,7 @@
                 <select asp-for="ChatId" class ="form-control" asp-items="ViewBag.ChatId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
+                <label asp-for="UserId" class="control-label">Username</label>
                 <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
             </div>
             <div class="form-group">
