--- a/ENations/Views/Messages/Details.cshtml
+++ b/ENations/Views/Messages/Details.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.Sender)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Sender.UserId)
+            @Html.DisplayFor(model => model.Sender.Username)
         </dd>
     </dl>
 </div>
