--- a/ENations/Views/Messages/Edit.cshtml
+++ b/ENations/Views/Messages/Edit.cshtml
@@ -24,7 +24,7 @@
                 <span asp-validation-for="ChatId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
+                <label asp-for="UserId" class="control-label">Username</label>
                 <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
