--- a/ENations/Views/PoliticalParties/Create.cshtml
+++ b/ENations/Views/PoliticalParties/Create.cshtml
@@ -23,7 +23,7 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CountryId" class="control-label">Country</label>
+                <label asp-for="CountryId" class="control-label">Country Name</label>
                 <select asp-for="CountryId" class ="form-control" asp-items="ViewBag.CountryId"></select>
             </div>
             <div class="form-group">
