--- a/ENations/Views/UserItems/Create.cshtml
+++ b/ENations/Views/UserItems/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ENations.Models.ItemOffers
+﻿@model ENations.Models.UserItems
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>ItemOffers</h4>
+<h4>UserItems</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,23 +18,14 @@
                 <span asp-validation-for="Item" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Quantity" class="control-label"></label>
-                <input asp-for="Quantity" class="form-control" />
-                <span asp-validation-for="Quantity" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Quality" class="control-label"></label>
                 <input asp-for="Quality" class="form-control" />
                 <span asp-validation-for="Quality" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CountryId" class="control-label">Country Name</label>
-                <select asp-for="CountryId" class ="form-control" asp-items="ViewBag.CountryId"></select>
+                <label asp-for="Quantity" class="control-label"></label>
+                <input asp-for="Quantity" class="form-control" />
+                <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="UserId" class="control-label">Username</label>
