--- a/ENations/Views/UserItems/Details.cshtml
+++ b/ENations/Views/UserItems/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ENations.Models.ItemOffers
+﻿@model ENations.Models.UserItems
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>ItemOffers</h4>
+    <h4>UserItems</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -17,28 +17,16 @@
             @Html.DisplayFor(model => model.Item)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Quantity)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Quantity)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Quality)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Quality)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Country)
+            @Html.DisplayNameFor(model => model.Quantity)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Country.Name)
+            @Html.DisplayFor(model => model.Quantity)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.User)
@@ -49,6 +37,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ItemOffersId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.UserItemsId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
