--- a/ENations/Views/UserMoneys/Delete.cshtml
+++ b/ENations/Views/UserMoneys/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ENations.Models.Message
+﻿@model ENations.Models.UserMoney
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,31 +8,31 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Message</h4>
+    <h4>UserMoney</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Likes)
+            @Html.DisplayNameFor(model => model.Gold)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Likes)
+            @Html.DisplayFor(model => model.Gold)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Chat)
+            @Html.DisplayNameFor(model => model.Currency)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Chat.ChatId)
+            @Html.DisplayFor(model => model.Currency)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Sender)
+            @Html.DisplayNameFor(model => model.User)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Sender.Username)
+            @Html.DisplayFor(model => model.User.Username)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="MessageId" />
+        <input type="hidden" asp-for="UserId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
