--- a/ENations/Views/UserMoneys/Edit.cshtml
+++ b/ENations/Views/UserMoneys/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ENations.Models.CountryFunds
+﻿@model ENations.Models.UserMoney
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,28 +6,26 @@
 
 <h1>Edit</h1>
 
-<h4>CountryFunds</h4>
+<h4>UserMoney</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="CountryId" />
+            <input type="hidden" asp-for="UserId" />
             <div class="form-group">
-                <label asp-for="CountryId" class="control-label">Country Name</label>
-                <select asp-for="CountryId" class="form-control" asp-items="ViewBag.CountryId"></select>
-                <span asp-validation-for="CountryId" class="text-danger"></span>
+                <label asp-for="Gold" class="control-label"></label>
+                <input asp-for="Gold" class="form-control" />
+                <span asp-validation-for="Gold" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Currency" class="control-label"></label>
                 <input asp-for="Currency" class="form-control" />
                 <span asp-validation-for="Currency" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Gold" class="control-label"></label>
-                <input asp-for="Gold" class="form-control" />
-                <span asp-validation-for="Gold" class="text-danger"></span>
-            </div>
+            <label asp-for="UserId" class="control-label">Username</label>
+            <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
+            <span asp-validation-for="UserId" class="text-danger"></span>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
