--- a/ENations/Views/Users/Create.cshtml
+++ b/ENations/Views/Users/Create.cshtml
@@ -43,7 +43,7 @@
                 <span asp-validation-for="Xp" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Region" class="control-label"></label>
+                <label asp-for="Region" class="control-label">Region Name</label>
                 <select asp-for="RegionId" class ="form-control" asp-items="ViewBag.RegionId"></select>
             </div>
             <div class="form-group">
