--- a/ENations/Views/Users/Edit.cshtml
+++ b/ENations/Views/Users/Edit.cshtml
@@ -44,7 +44,7 @@
                 <span asp-validation-for="Xp" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RegionId" class="control-label"></label>
+                <label asp-for="RegionId" class="control-label">Region Name</label>
                 <select asp-for="RegionId" class="form-control" asp-items="ViewBag.RegionId"></select>
                 <span asp-validation-for="RegionId" class="text-danger"></span>
             </div>
