--- a/ENations/Views/Chats/Index.cshtml
+++ b/ENations/Views/Chats/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Chats</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.ChannelId)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ChatId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ChatId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ChatId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ChatId" class="btn btn-warning">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ChatId" class="btn btn-info">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ChatId" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
