--- a/ENations/Views/Companies/Delete.cshtml
+++ b/ENations/Views/Companies/Delete.cshtml
@@ -4,11 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h2>Are you sure you want to delete this Company?</h2>
 <div>
-    <h4>Company</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -34,6 +32,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="CompanyId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
