--- a/ENations/Views/CongressMembers/Index.cshtml
+++ b/ENations/Views/CongressMembers/Index.cshtml
@@ -8,7 +8,7 @@
 </h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -26,9 +26,9 @@
                 @Html.DisplayFor(modelItem => item.PoliticalParty.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CongressMemberId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CongressMemberId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CongressMemberId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.CongressMemberId" class="btn btn-warning">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.CongressMemberId" class="btn btn-info">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.CongressMemberId" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
