--- a/ENations/Views/CountryFunds/Details.cshtml
+++ b/ENations/Views/CountryFunds/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>CountryFunds</h4>
+    <h4>Country Funds</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.CountryId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.CountryId" class="btn btn-warning">Edit</a> |
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
