--- a/ENations/Views/Messages/Index.cshtml
+++ b/ENations/Views/Messages/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Messages</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Sender.Username)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.MessageId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MessageId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MessageId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.MessageId" class="btn btn-warning">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.MessageId" class="btn btn-info">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.MessageId" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
