--- a/ENations/Views/Regions/Delete.cshtml
+++ b/ENations/Views/Regions/Delete.cshtml
@@ -25,6 +25,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="RegionId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> 
-        <a asp-action="Index" class="btn btn-primary">Back to List</a>
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
