--- a/ENations/Views/Regions/Index.cshtml
+++ b/ENations/Views/Regions/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Regions</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.Country.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.RegionId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.RegionId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.RegionId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.RegionId" class="btn btn-warning">Edit</a>
+                <a asp-action="Details" asp-route-id="@item.RegionId" class="btn btn-info">Details</a>
+                <a asp-action="Delete" asp-route-id="@item.RegionId" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
