--- a/ENations/Views/Users/Index.cshtml
+++ b/ENations/Views/Users/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Users</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -20,9 +20,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Password)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Level)
@@ -49,9 +46,6 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Password)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Level)
             </td>
             <td>
@@ -61,9 +55,9 @@
                 @Html.DisplayFor(modelItem => item.Region.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.UserId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.UserId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.UserId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.UserId" class="btn btn-warning">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.UserId" class="btn btn-info">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.UserId" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
