feat: changes in politic logic

--- a/ENations/Views/LawProposals/Create.cshtml
+++ b/ENations/Views/LawProposals/Create.cshtml
@@ -48,7 +48,7 @@
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="CongressMemberId" class="control-label"></label>
+                <label asp-for="CongressMemberId" class="control-label">Congress Member</label>
                 <select asp-for="CongressMemberId" class ="form-control" asp-items="ViewBag.CongressMemberId"></select>
             </div>
             <div class="form-group">
