--- a/ENations/Views/CongressMembers/Create.cshtml
+++ b/ENations/Views/CongressMembers/Create.cshtml
@@ -13,8 +13,8 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="PoliticalPartyId" class="control-label">Political Party</label>
-                <select asp-for="PoliticalPartyId" class ="form-control" asp-items="ViewBag.PoliticalPartyId"></select>
+                <label asp-for="PartyMemberId" class="control-label"></label>
+                <select asp-for="PartyMemberId" class ="form-control" asp-items="ViewBag.PartyMemberId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -24,7 +24,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
