--- a/ENations/Views/CongressMembers/Delete.cshtml
+++ b/ENations/Views/CongressMembers/Delete.cshtml
@@ -4,22 +4,24 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Are you sure you want to delete this Congress Member?</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
+    <h4>CongressMember</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PoliticalParty)
+        <dt class="col-sm-2">
+            Username
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PoliticalParty.Name)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PartyMember.User.Username)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="CongressMemberId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+        <a asp-action="Index">Back to List</a>
     </form>
 </div>
