--- a/ENations/Views/CongressMembers/Details.cshtml
+++ b/ENations/Views/CongressMembers/Details.cshtml
@@ -7,18 +7,18 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Congress Member</h4>
+    <h4>CongressMember</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PoliticalParty)
+            @Html.DisplayNameFor(model => model.PartyMember)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PoliticalParty.Name)
+            @Html.DisplayFor(model => model.PartyMember.PartyMemberId)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.CongressMemberId" class="btn btn-warning">Edit</a>
-    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.CongressMemberId">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
