--- a/ENations/Views/CongressMembers/Edit.cshtml
+++ b/ENations/Views/CongressMembers/Edit.cshtml
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CongressMemberId" />
             <div class="form-group">
-                <label asp-for="PoliticalPartyId" class="control-label">Political Party Name</label>
-                <select asp-for="PoliticalPartyId" class="form-control" asp-items="ViewBag.PoliticalPartyId"></select>
-                <span asp-validation-for="PoliticalPartyId" class="text-danger"></span>
+                <label asp-for="PartyMemberId" class="control-label"></label>
+                <select asp-for="PartyMemberId" class="form-control" asp-items="ViewBag.PartyMemberId"></select>
+                <span asp-validation-for="PartyMemberId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -26,7 +26,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
