--- a/ENations/Views/CongressMembers/Index.cshtml
+++ b/ENations/Views/CongressMembers/Index.cshtml
@@ -4,33 +4,37 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Congress Members
-</h1>
+<h1>Index</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-primary">Create New</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                Political Party
+                Party Member
+            </th>
+            <th>
+                Party
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.PoliticalParty.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.CongressMemberId" class="btn btn-warning">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.CongressMemberId" class="btn btn-info">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.CongressMemberId" class="btn btn-danger">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PartyMember.User.Username)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PartyMember.PoliticalParty.Name)
+                </td>
+                <td>
+                    <a asp-action="Delete" asp-route-id="@item.CongressMemberId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
