--- a/ENations/Views/LawProposals/Delete.cshtml
+++ b/ENations/Views/LawProposals/Delete.cshtml
@@ -55,7 +55,7 @@
             @Html.DisplayNameFor(model => model.CongressMember)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CongressMember.CongressMemberId)
+            @Html.DisplayFor(model => model.CongressMember.PartyMember.User.Username)
         </dd>
     </dl>
     
