--- a/ENations/Views/LawProposals/Details.cshtml
+++ b/ENations/Views/LawProposals/Details.cshtml
@@ -56,7 +56,7 @@
             @Html.DisplayNameFor(model => model.CongressMember)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CongressMember.CongressMemberId)
+            @Html.DisplayFor(model => model.CongressMember.PartyMember.User.Username)
         </dd>
     </dl>
 </div>
