--- a/ENations/Views/Users/Create.cshtml
+++ b/ENations/Views/Users/Create.cshtml
@@ -12,11 +12,11 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="Strength" class="control-label"></label>
                 <input asp-for="Strength" class="form-control" />
                 <span asp-validation-for="Strength" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="Username" class="control-label"></label>
                 <input asp-for="Username" class="form-control" />
@@ -29,19 +29,19 @@
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
+                <input asp-for="Password" class="form-control" type="password"/>
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
+           @*  <div class="form-group">
                 <label asp-for="Level" class="control-label"></label>
                 <input asp-for="Level" class="form-control" />
                 <span asp-validation-for="Level" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div> *@
+           @*  <div class="form-group">
                 <label asp-for="Xp" class="control-label"></label>
                 <input asp-for="Xp" class="form-control" />
                 <span asp-validation-for="Xp" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="Region" class="control-label">Region Name</label>
                 <select asp-for="RegionId" class ="form-control" asp-items="ViewBag.RegionId"></select>
