--- a/ENations/Views/LawProposals/Details.cshtml
+++ b/ENations/Views/LawProposals/Details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ExpectedVotes)
+            Expected Votes
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ExpectedVotes)
@@ -53,7 +53,7 @@
             @Html.DisplayFor(model => model.Finished)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CongressMember)
+            Congress Member
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CongressMember.PartyMember.User.Username)
