--- a/ENations/Views/Companies/Create.cshtml
+++ b/ENations/Views/Companies/Create.cshtml
@@ -15,30 +15,38 @@
             <div class="form-group">
                 <label asp-for="Type" class="control-label">Company Type</label>
                 <select asp-for="Type" class="form-control">
-                    <option value="Technology">Technology</option>
-                    <option value="Finance">Finance</option>
-                    <option value="Healthcare">Healthcare</option>
-                    <option value="Retail">Retail</option>
-                    <option value="Manufacturing">Manufacturing</option>
-                    <option value="Consulting">Consulting</option>
+                    <option value="Iron">Iron</option>
+                    <option value="Grain">Grain</option>
+                    <option value="Oil">Oil</option>
+                    <option value="Stone">Stone</option>
+                    <option value="Wood">Wood</option>
+                    <option value="Diamonds">Diamonds</option>
+                    <option value="Weapon">Weapon</option>
+                    <option value="House">House</option>
+                    <option value="Gift">Gift</option>
+                    <option value="Food">Food</option>
+                    <option value="Ticket">Ticket</option>
+                    <option value="Defense System">Defense System</option>
+                    <option value="Hospital">Hospital</option>
+                    <option value="Estate">Estate</option>
                 </select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Quality" class="control-label">Quality</label>
                 <select asp-for="Quality" class="form-control">
-                    @for (int i = 1; i <= 10; i++)
+                    @for (int i = 1; i <= 5; i++)
                     {
                         <option value="@i">@i</option>
                     }
                 </select>
                 <span asp-validation-for="Quality" class="text-danger"></span>
             </div>
-            <div class="form-group">
+@*             <div class="form-group">
                 <label asp-for="LastWorked" class="control-label"></label>
                 <input asp-for="LastWorked" class="form-control" />
                 <span asp-validation-for="LastWorked" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
