--- a/ENations/Views/CongressMembers/Index.cshtml
+++ b/ENations/Views/CongressMembers/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Congress Members</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -32,7 +32,7 @@
                     @Html.DisplayFor(modelItem => item.PartyMember.PoliticalParty.Name)
                 </td>
                 <td>
-                    <a asp-action="Delete" asp-route-id="@item.CongressMemberId">Delete</a>
+                    <a asp-action="Delete" asp-route-id="@item.CongressMemberId" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
         }
