--- a/ENations/Views/LawProposals/Create.cshtml
+++ b/ENations/Views/LawProposals/Create.cshtml
@@ -13,13 +13,17 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ExpectedVotes" class="control-label"></label>
+                <label asp-for="ExpectedVotes" class="control-label">Expected Votes</label>
                 <input asp-for="ExpectedVotes" class="form-control" />
                 <span asp-validation-for="ExpectedVotes" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <input asp-for="Type" class="form-control" />
+                <select asp-for="Type" class="form-control">
+                    <option value="">Please select an option</option>
+                    <option value="Print Money">Print Money</option>
+                    <option value="Donate Money">Donate Money</option>
+                </select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -42,11 +46,11 @@
                     <input class="form-check-input" asp-for="No" /> @Html.DisplayNameFor(model => model.No)
                 </label>
             </div>
-            <div class="form-group form-check">
+@*             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Finished" /> @Html.DisplayNameFor(model => model.Finished)
                 </label>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="CongressMemberId" class="control-label">Congress Member</label>
                 <select asp-for="CongressMemberId" class ="form-control" asp-items="ViewBag.CongressMemberId"></select>
