--- a/ENations/Views/LawProposals/Edit.cshtml
+++ b/ENations/Views/LawProposals/Edit.cshtml
@@ -20,7 +20,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <input asp-for="Type" class="form-control" />
+                <select asp-for="Type" class="form-control">
+                    <option value="">Please select an option</option>
+                    <option value="Print Money">Print Money</option>
+                    <option value="Donate Money">Donate Money</option>
+                </select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -49,7 +53,7 @@
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="CongressMemberId" class="control-label"></label>
+                <label asp-for="CongressMemberId" class="control-label">Congress Member</label>
                 <select asp-for="CongressMemberId" class="form-control" asp-items="ViewBag.CongressMemberId"></select>
                 <span asp-validation-for="CongressMemberId" class="text-danger"></span>
             </div>
