--- a/ENations/Views/Messages/Create.cshtml
+++ b/ENations/Views/Messages/Create.cshtml
@@ -12,6 +12,13 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="form-group">
+                <label asp-for="Content" class="control-label">Content</label>
+                <textarea asp-for="Content" class="form-control"></textarea>
+                <span asp-validation-for="Content" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="Likes" class="control-label"></label>
                 <input asp-for="Likes" class="form-control" />
@@ -19,11 +26,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="ChatId" class="control-label"></label>
-                <select asp-for="ChatId" class ="form-control" asp-items="ViewBag.ChatId"></select>
+                <select asp-for="ChatId" class="form-control" asp-items="ViewBag.ChatId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="UserId" class="control-label">Username</label>
-                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
+                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -37,5 +44,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
