--- a/ENations/Views/Messages/Index.cshtml
+++ b/ENations/Views/Messages/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Content)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Likes)
             </th>
             <th>
@@ -25,23 +28,27 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Likes)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Chat.ChatId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sender.Username)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.MessageId" class="btn btn-warning">Edit</a> |
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Content)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Likes)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Chat.ChatId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Sender.Username)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.MessageId" class="btn btn-warning">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.MessageId" class="btn btn-info">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.MessageId" class="btn btn-danger">Delete</a>
-            </td>
-        </tr>
-}
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
