--- a/ENations/Views/PartyMembers/Edit.cshtml
+++ b/ENations/Views/PartyMembers/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Edit</h1>
 
-<h4>PartyMember</h4>
+<h4>Party Member</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,8 +14,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="PartyMemberId" />
             <div class="form-group">
-                <label asp-for="Level" class="control-label"></label>
-                <input asp-for="Level" class="form-control" />
+                <label asp-for="Level" class="control-label">Level</label>
+                <select asp-for="Level" class="form-control">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                </select>
                 <span asp-validation-for="Level" class="text-danger"></span>
             </div>
             <div class="form-group">
