Feat: UI for CompanyOwners done and some other Views updated.

--- a/ENations/Views/Shared/_Layout.cshtml
+++ b/ENations/Views/Shared/_Layout.cshtml
@@ -65,6 +65,8 @@
                                 <li><a class="dropdown-item" href="/Companies/Index">Companies</a></li>
                                 <li><a class="dropdown-item" href="/CountryFunds/Index">Country Funds</a></li>
                                 <li><a class="dropdown-item" href="/ItemOffers/Index">Item Offers</a></li>
+                                <li><a class="dropdown-item" href="/CompanyOwners/Index">Company Owners</a></li>
+
                             </ul>
                         </li>
 
