--- a/ENations/Views/Chats/Create.cshtml
+++ b/ENations/Views/Chats/Create.cshtml
@@ -13,12 +13,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ChannelType" class="control-label"></label>
+                <label asp-for="ChannelType" class="control-label">Channel Type</label>
                 <input asp-for="ChannelType" class="form-control" />
                 <span asp-validation-for="ChannelType" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ChannelId" class="control-label"></label>
+                <label asp-for="ChannelId" class="control-label">Channel ID</label>
                 <input asp-for="ChannelId" class="form-control" />
                 <span asp-validation-for="ChannelId" class="text-danger"></span>
             </div>
