--- a/ENations/Views/Messages/Create.cshtml
+++ b/ENations/Views/Messages/Create.cshtml
@@ -25,7 +25,7 @@
                 <span asp-validation-for="Likes" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ChatId" class="control-label"></label>
+                <label asp-for="ChatId" class="control-label">Chat ID</label>
                 <select asp-for="ChatId" class="form-control" asp-items="ViewBag.ChatId"></select>
             </div>
             <div class="form-group">
